--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,21 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.GridPane?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
-
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ListView id="animalPresentList" prefHeight="347.0" prefWidth="600.0" />
-      <ButtonBar layoutX="24.0" layoutY="342.0" prefHeight="52.0" prefWidth="553.0">
-        <buttons>
-            <TextField id="animalName" fx:id="animalNameField" prefHeight="27.0" prefWidth="240.0" promptText="Enter animal name..." />
-            <Button id="addAnimal" fx:id="addButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="24.0" prefWidth="50.0" text="Add" />
-            <Button id="removeAnimal" fx:id="removeButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="98.0" text="Remove" />
-        </buttons>
-      </ButtonBar>
-   </children>
-</Pane>
+<?import javafx.scene.control.Label?>
+<GridPane fx:controller="sample.Controller"
+          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+</GridPane>
